FIX: contrast logo stroke white

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -310,7 +310,7 @@
 .contrast-logo {
     .header__logo-svg {
         fill: $color-5;
-        stroke: $main-color;
+        stroke: $color-5;
     }
 
     .header__logo-text{
